# typeshaper

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: readme.zh.md
examples/app/: Cargo.toml
examples/app/src/: main.rs
examples/core/: Cargo.toml
examples/core/src/: lib.rs
src/: error.rs  lib.rs  transform.rs
tests/: bugs.rs  compile_errors.rs  generics.rs  usage.rs  visibility.rs
tests/ui/: generic_without_params.rs  generic_without_params.stderr  partial_double_wrap.rs  partial_double_wrap.stderr  pick_duplicate_field.rs  pick_duplicate_field.stderr  sculpt_invalid_attr.rs  sculpt_invalid_attr.stderr
typeshaper-macros/: Cargo.toml
typeshaper-macros/src/: expand.rs  lib.rs  parse.rs  state.rs
