[package]
name = "typeshaper-macros"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro internals for the typeshaper crate — do not use directly"
keywords = ["macros", "codegen", "struct", "type-algebra"]
categories = ["rust-patterns", "development-tools"]
readme = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
once_cell = "1"
